--- a/src/assets/scss/utils/_defaults.scss
+++ b/src/assets/scss/utils/_defaults.scss
@@ -7,7 +7,7 @@ $dark: rgb(29, 29, 29);
 $light: #fff;
 $primary: #ff9f29;
 $bg: rgb(244, 244, 255);
-$red: red;
+$red: rgb(244, 16, 16);
 
 //spacing
 $spacing-md: 16px;
