--- a/src/assets/scss/components/_cart.scss
+++ b/src/assets/scss/components/_cart.scss
@@ -1,8 +1,7 @@
 .cart {
-  background: $light !important;
   cursor: pointer;
   outline: none;
-  padding: 0.75rem 1.25rem;
+  padding: 0.75rem 1.2rem;
   border-radius: $borderRadius;
   font-size: 1rem;
   font-family: inherit;
@@ -12,7 +11,7 @@
 
   &:hover {
     border-color: $primary;
-    background: $dark;
+    background: rgba($primary, 0.1);
     color: $light;
   }
 }
