--- a/src/assets/scss/pages/_all.scss
+++ b/src/assets/scss/pages/_all.scss
@@ -1,5 +1,6 @@
-@import "login";
-@import "home";
-@import "contact";
 @import "about";
+@import "contact";
+@import "home";
+@import "login";
+@import "product";
 @import "productdetail";
