--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -45,6 +45,11 @@
       font-weight: 500;
       position: absolute;
       top: 53%;
+      color: $dark;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
