--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -28,12 +28,11 @@
   }
   @media only screen and (max-width: 800px) {
     .carousel {
-      height: 80vh;
+      height: 100%;
+      margin-top: 3rem;
     }
   }
-  @media only screen and (max-width: 800px) {
-    .carousel {
-      height: 80vh;
-    }
+  .carousel .slide img {
+    transform: scale(1.4);
   }
 }
